--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,8 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          winget install microsoft.nuget
           import-module PowershellGet -Force
+          Invoke-WebRequest https://nuget.org/nuget.exe -OutFile '.\AppData\Local\Microsoft\Windows\PowerShell\PowerShellGet\nuget.exe'
           
       - name: Publish Module
         run: |
