--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,13 +6,13 @@ on:
       - main
       - dev
     paths:
-      - Modules/*
+      - Modules/**
   pull_request:
     branches:
       - main
       - dev
     paths:
-      - Modules/*
+      - Modules/**
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
