--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,12 +5,12 @@ on:
     branches:
       - main
     paths:
-      - Modules/MyModestModule
+      - Modules/**
   pull_request:
     branches:
       - main
     paths:
-      - Modules/MyModestModule
+      - Modules/**
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
